--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
       <version>6.1.1.Final</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.1.6.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
